[package]
name = "rote"
version = "0.1.0"
authors = ["Rudo2204 <rudo2204@gmail.com>"]
edition = "2018"
description = "rote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.22.0"
image = "0.23"
glob = "0.3.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
anyhow = "1.0"
chrono = "0.4.19"
fs2 = "0.4.3"
shellexpand = "2.1.0"
clap = "2.33.3"
toml = "0.5.8"
serde = {version = "1.0", features= ["serde_derive"]}
thiserror = "1.0"
filesize = "0.2"
genpdf = { version = "0.2", features = ["images"] }
google-drive3 = "*"
hyper = { version = "0.14", features = ["client", "tcp"] }
hyper-rustls = "^0.22"
serde_json = "^1.0"
yup-oauth2 = "5.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
