[package]
name = "rote"
version = "0.1.0"
authors = ["Rudo2204 <rudo2204@gmail.com>"]
edition = "2018"
description = "rote"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.23.0"
image = "0.24"
glob = "0.3.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
anyhow = "1.0"
chrono = "0.4.19"
fs2 = "0.4.3"
shellexpand = "2.1.0"
clap = { version = "3.2", features = ["cargo"] }
toml = "0.5.9"
serde = {version = "1.0", features= ["serde_derive"]}
thiserror = "1.0"
filesize = "0.2"
genpdf = { version = "0.2", features = ["images"] }
google-drive3 = "*"
hyper = { version = "0.14", features = ["client", "tcp"] }
hyper-rustls = "0.23"
serde_json = "1.0"
yup-oauth2 = "7.0"
tokio = { version = "1", features = ["rt", "macros", "time"] }
scraper = "0.13"
regex = "1.6"
epub-builder = { git = "https://github.com/Rudo2204/epub-builder.git", branch = "more-nav" }
